tests/zer_fail/dalpha9_write_cr0_args.zer
// EXPECTED: compile error
// @cpu_write_cr0 requires 1 argument (value)

i32 main() {
    @cpu_write_cr0();  // error: missing arg
    return 0;
}
